--- a/Math-menu.html
+++ b/Math-menu.html
@@ -54,7 +54,7 @@
     </tr>
     <tr>
       <th>
-        <a href="Maclaurin-series.html>Maclaurin Series</a>
+        <a href="Maclaurin-series.html">Maclaurin Series</a>
       </th>
     </tr>
   </table>
