--- a/Math-menu.html
+++ b/Math-menu.html
@@ -56,6 +56,9 @@
       <th>
         <a href="Maclaurin-series.html">Maclaurin Series</a>
       </th>
+      <th>
+        <a href="Penerapan-maclaurin-series.html">Penerapan maclaurin series</a>
+      </th>
     </tr>
   </table>
 </div>
