--- a/Penerapan-maclaurin-series.html
+++ b/Penerapan-maclaurin-series.html
@@ -139,11 +139,11 @@
     $0=$2cos\theta sin\theta+sin2\theta$
     $sin2\theta=2sin\theta cos\theta$
   </div>
-  <p>dari sana lah kita bisa mengetahui bahwa:</p>
+  <p>dari sanalah kita bisa mengetahui bahwa:</p>
   <div class="result">$cos2\theta=cos^2\theta-sin^2\theta$</div>
   <p>dan</p>
   <div class="result">$sin2\theta=2sin\theta cos\theta$</div>
-  <p>sekarang,erbukti bahwa deret maclaurin benar benar menunjukkan nilai yang tepat. bisakah anda menunjukkan bukti lain?</p>
+  <p>sekarang,terbukti bahwa deret maclaurin benar benar menunjukkan nilai yang tepat. bisakah anda menunjukkan bukti lain?</p>
   <hr />
   <p class="copyright">&copy; Fikri Mulyana Setiawan</p>
   <script type="text/x-mathjax-config">
