--- a/Penerapan-maclaurin-series.html
+++ b/Penerapan-maclaurin-series.html
@@ -129,14 +129,14 @@
     <p>$cos2\theta+isin2\theta=(cos\theta+isin\theta)^2$</p>
     <p>$cos2\theta+isin2\theta=cos^2\theta+2cos\theta×isin\theta+(isin\theta)^2$</p>
     <p>$cos2\theta+isin2\theta=cos^2\theta+2cos\theta×isin\theta-sin^2\theta$</p>
-    <p>$cos2\theta=cos^2\theta-sin^2\theta+i(2cos\theta sin\theta+sin2\theta)$</p>
+    <p>$cos2\theta=cos^2\theta-sin^2\theta+i(2cos\theta sin\theta-sin2\theta)$</p>
   </div>
   <p>dalam konsep bilangan kompleks, jika bilangan kompleks $z_1=z_2$ dimana $z_1=x_1+iy_1$ dan $z_2=x_2+iy_2$ (x adalah bagian real dari bilangan kompleks, dan y adalah bagian imajiner dari bilangan kompleks), maka $x_1=x_2$ dan $y_1=y_2$. pada persamaan di atas, bisa dibilang bahwa $x_1=cos\theta$ dan $x_2=cos^2\theta-sin^2\theta$.jadi, </p>
   <div class="rumus">
     <p>$x_1=x_2$</p>
     <p>$cos2\theta=cos^2\theta-sin^2\theta$</p>
     <p>$y_1=y_2$</p>
-    <p>$0=2cos\theta sin\theta+sin2\theta$</p>
+    <p>$0=2cos\theta sin\theta-sin2\theta$</p>
     <p>$sin2\theta=2sin\theta cos\theta$</p>
   </div>
   <p>dari sanalah kita bisa mengetahui bahwa:</p>
