--- a/Math-menu.html
+++ b/Math-menu.html
@@ -60,6 +60,12 @@
         <a href="Penerapan-maclaurin-series.html">Penerapan maclaurin series</a>
       </th>
     </tr>
+      <th>
+        <a href="Gametheory.html">Game theory</a>
+      </th>
+    <tr>
+
+    </tr>
   </table>
 </div>
 <script type="text/x-mathjax-config">
