--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     </div>
   </div> 
   <h2 class="title" align="center" color="#D49513"><b><em>About Me:</em></b></h2>
-  <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
+  <p align="center"><img id="fotoprofil" src="fotoprofil.jpg" border=5 style="border-radius:50%;" /></p>
   <br>
   <p id="keterangan" align="center"><em><b>Fikri Mulyana Setiawan adalah seorang siswa, web developer, dan programmer. Ia sangat antusias ketika menemukan hal yang menantang, seperti teka-teki, dan tentu saja subjek matematika dan fisika. Ia sekarang duduk di bangku SMA kelas XII. Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic), javascript(basic), dan juga python (intermediate). selain seorang programmer, fikri juga seorang fisikawan.</b></em></p>
   <div id="copyright" align="center"><a href="TermOfUse.html">terms of use</a><p class="hakcipta">copyright &copy;fikri mulyana setiawan</br><a href="//www.dmca.com/Protection/Status.aspx?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w150-5x1-10.png?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db"  alt="DMCA.com Protection Status" /></a></p>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
