--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             Quick link
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="ChatBot.html">ChatBot</a> 
             <a class="dropdown-item" href="Donkeygame.html">Donkey.js Game</a> 
             <a class="dropdown-item" href="Calculator.html">Calculator</a>
             <a class="dropdown-item" href="CaesarCipher.html">Caesar Cipher</a>
