--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -58,6 +58,7 @@
       <th><a href="Guess_number_game.html">- Guess-number Game</a></th> 
     </tr>
       <th><a href="Donkeygame.html">- Donkey.js Game</a></th>
+      <th><a href="ChatBot.html">- ChatBot</a></th>
     <tr>
     </tr>
   </table>
