--- a/ChatBot.html
+++ b/ChatBot.html
@@ -42,7 +42,7 @@
     </div>
   </div>
   <div class="botName">
-    <span><img src="Headbot.png" alt="foto" /></span>F - ChatBot 
+    F - ChatBot 
   </div>
   <div class="display">
   <div class="robot">
