--- a/index.html
+++ b/index.html
@@ -210,6 +210,16 @@
   <div class="LatestUpdate">
     <div class="item">
       <div class="card" style="width: 18rem;">
+        <img class="update" height="160" src="imgchatbot.jpg" class="card-img-top" alt="ChatBot">
+        <div class="card-body">
+          <h5 class="card-title">Project:F - ChatBot</h5>
+          <p class="card-text" align="justify">F-Chatbot adalah sebuah program untuk menjawab pertanyaan pertanyaan anda dengan bantuan dari wolfram alpha dan google search.</p>
+          <a href="Donkeygame.html" class="btn btn-primary">Lihat</a>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="card" style="width: 18rem;">
         <img class="update" height="160" src="imagefordonkeygame.jpg" class="card-img-top" alt="Calculator Project">
         <div class="card-body">
           <h5 class="card-title">Project:Donkey.js Game</h5>
