--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         <div class="card-body">
           <h5 class="card-title">Project:F - ChatBot</h5>
           <p class="card-text" align="justify">F-Chatbot adalah sebuah program untuk menjawab pertanyaan pertanyaan anda dengan bantuan dari wolfram alpha dan google search.</p>
-          <a href="Donkeygame.html" class="btn btn-primary">Lihat</a>
+          <a href="ChatBot.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
