--- a/ChatBot.html
+++ b/ChatBot.html
@@ -18,7 +18,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>F - ChatBot | Fikri Notes</title>
     <link rel="stylesheet" href="ChatBot.css" type="text/css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Geostar+Fill&family=Kelly+Slab&display=swap" rel="stylesheet">
 </head>
@@ -34,8 +34,8 @@
           </button>
         </div>
         <div class="modal-body">
-          <b>Perhatian!!!</b> <br /> 
-          Program ini sering disebut dengan rule-based chatbot, artinya chatbot yang telah diprogram untuk menerima perintah spesifik dan jawaban spesifik yang telah ditentukan sebelumnya. dengan kata lain, program ini dibuat tanpa kecerdasan buatan (AI). Karena itu, jika bot ini tidak mengetahui jawaban dari pertanyaan anda, "dia" akan merujuk ke wikipedia, google search, ataupun wolfram alpha 
+          <b>Penjelasan</b> <br /> 
+          Program ini sering disebut dengan rule-based chatbot, artinya chatbot yang telah diprogram untuk menerima perintah spesifik dan jawaban spesifik yang telah ditentukan sebelumnya. dengan kata lain, program ini dibuat tanpa kecerdasan buatan (AI). Karena itu, jika bot ini tidak mengetahui jawaban dari pertanyaan anda, "dia" akan merujuk ke wikipedia, google search, ataupun wolfram alpha. Silakan hubungi ke halaman kontak yang terdapat pada website ini jika anda mengalami kesulitan. 
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
@@ -78,8 +78,9 @@
   $('#myModal').modal('show');
 </script>
   
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous">
-</script>  
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>  
 </body>
 
 </html>
