--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
             Quick link
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="Get_help.html">Learning guide (Help!)</a>
             <a class="dropdown-item" href="ChatBot.html">ChatBot</a> 
             <a class="dropdown-item" href="Donkeygame.html">Donkey.js Game</a> 
             <a class="dropdown-item" href="Calculator.html">Calculator</a>
