--- a/index.html
+++ b/index.html
@@ -212,6 +212,16 @@
   <div class="LatestUpdate">
     <div class="item">
       <div class="card" style="width: 18rem;">
+        <img class="update" height="160" src="imageforhelp.jpg" class="card-img-top" alt="Help">
+        <div class="card-body">
+          <h5 class="card-title">Help!</h5>
+          <p class="card-text" align="justify">Halaman web ini merupakan kontribusi kami di bidang pendidikan. halaman ini brrfungsi untuk tempat bertanya tentang materi materi sekolah </p>
+          <a href="#" class="btn btn-primary">Lihat</a>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="card" style="width: 18rem;">
         <img class="update" height="160" src="imgchatbot.jpg" class="card-img-top" alt="ChatBot">
         <div class="card-body">
           <h5 class="card-title">Project:F - ChatBot</h5>
