--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
         <img class="update" height="160" src="imageforhelp.jpg" class="card-img-top" alt="Help">
         <div class="card-body">
           <h5 class="card-title">Help!</h5>
-          <p class="card-text" align="justify">Halaman web ini merupakan kontribusi kami di bidang pendidikan. halaman ini brrfungsi untuk tempat bertanya tentang materi materi sekolah </p>
+          <p class="card-text" align="justify">Halaman web ini merupakan kontribusi kami di bidang pendidikan. halaman ini berfungsi untuk tempat bertanya tentang materi-materi sekolah </p>
           <a href="#" class="btn btn-primary">Lihat</a>
         </div>
       </div>
