--- a/Helpform.html
+++ b/Helpform.html
@@ -55,7 +55,7 @@
         </tr>
         <tr>
           <td class="link"><a class="text-decoration-none text-reset" href="Physics_menu.html">Blog Fisika</a></td>
-          <td class="link"><a class="text-decoration-none text-reset" href="Math_menu.html">Blog Matematika</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="Math-menu.html">Blog Matematika</a></td>
         </tr>
         <tr>
           <td class="link"><a class="text-decoration-none text-reset" href="computerscience.html">Blog computer science</a></td>
