--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <div class="card-body">
           <h5 class="card-title">Help!</h5>
           <p class="card-text" align="justify">Halaman web ini merupakan kontribusi kami di bidang pendidikan. halaman ini berfungsi untuk tempat bertanya tentang materi-materi sekolah </p>
-          <a href="#" class="btn btn-primary">Lihat</a>
+          <a href="Get_help.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
