--- a/index.html
+++ b/index.html
@@ -105,6 +105,12 @@
           <a class="nav-link" href="Javascriptproject-menu.html">Javascript Project</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="Get_help.html">Learning Guide (Help!)</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="HearingMusic.html">Hearing Music</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="My_album.html">My Album</a>
         </li>
         <li class="nav-item">
@@ -121,7 +127,6 @@
             Quick link
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="Get_help.html">Learning guide (Help!)</a>
             <a class="dropdown-item" href="ChatBot.html">ChatBot</a> 
             <a class="dropdown-item" href="Donkeygame.html">Donkey.js Game</a> 
             <a class="dropdown-item" href="Calculator.html">Calculator</a>
