--- a/HearingMusic.html
+++ b/HearingMusic.html
@@ -93,7 +93,7 @@
 
 
 <div class="sec1">
-  <img src="bghelp1.jpg" alt="image" width="100%" />
+  <img src="HearingMusic.jpg" alt="image" width="100%" />
 </div>
 <div class="sec2">
   <div class="reveal-holder">
