--- a/HearingMusic.html
+++ b/HearingMusic.html
@@ -15,7 +15,7 @@
     <link rel="icon" href="logo_fix.png" height=250px>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Hearing Music | Lo-Fi mudic by Fikri Mulyana Setiawan</title>
+    <title> Hearing Music | Lo-Fi music by Fikri Mulyana Setiawan</title>
     <link rel="stylesheet" href="HearingMusic.css" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
