--- a/HearingMusic.html
+++ b/HearingMusic.html
@@ -107,6 +107,7 @@
 </div>
 <div align="center">
   <audio src="Game.Music(1).mp3" controls></audio>
+  <audio src="IndustrialRock.mp3" controls></audio>
 </div>
 
 
