--- a/HearingMusic.html
+++ b/HearingMusic.html
@@ -32,7 +32,7 @@
     Hear Music
   </div>
 </div>
-<nav class="navbar navbar-expand-lg navbar-light bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html"><div class="logo"><img src="fikri_notes.png" alt="logo" width="45px"/><div class="webpage">FIKRI NOTES</div></div></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
