--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 <body>
   <div id="header">
-    <div align="center"><img class="image" src="fikri_notes.png"><br/><h1>Fikri Notes</h1> </div>
+    <div align="center"><img class="image" src="logo_fix.png"><br/><h1>Fikri Notes</h1> </div>
   </div>
   <nav class="navbar navbar-dark bg-dark ">
     <a class="navbar-brand text-warning" href="#">Menu</a>
