--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
   <link rel="icon" href="logo_fix.png" height=250px>
   <meta name="google-site-verification" content="JJt8s-bShfClSaIksS6BEHrJq7gFqDScaqKzsULaaH4" />
   <meta charset="utf-8">
-  <meta name="theme-color" content="#1B65E8"/>
+  <meta name="theme-color" content="#4E5054"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
   <link href="https://fonts.googleapis.com/css2?family=Coda&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> 
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="styleindex.css">
   <link href="https://fonts.googleapis.com/css2?family=Gruppo&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oxanium&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <script src="https://unpkg.com/scrollreveal"></script>   
 </head>
 <style>
@@ -79,100 +82,110 @@
 </style>
 
 <body>
-  <div id="header">
-    <div align="center"><img class="image" src="logo_fix.png"><br/><h1>Fikri Notes</h1> </div>
-  </div>
-  <nav class="navbar navbar-dark bg-dark ">
-    <a class="navbar-brand text-warning" href="#">Menu</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+  
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="index.html"><div class="logo"><img src="logo_fix.png" alt="logo" width="60"/><div class="webpage">FIKRI NOTES</div></div></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Physics_menu.html">Fisika</a>
+          <a class="nav-link active" href="Physics_menu.html">Fisika</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Math-menu.html">Matematika</a>
+          <a class="nav-link active" href="Math-menu.html">Matematika</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="computerscience.html">Computer Science</a>
+          <a class="nav-link active" href="computerscience.html">Computer Science</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Javascriptproject-menu.html">Javascript Project</a>
+          <a class="nav-link active" href="Javascriptproject-menu.html">Javascript Project</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="Get_help.html">Learning Guide (Help!)</a>
+          <a class="nav-link active" href="My_album.html">My Album</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="HearingMusic.html">Hearing Music</a>
+          <a class="nav-link active" href="Contact-me.html">Contact Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="My_album.html">My Album</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="Contact-me.html">Contact Me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="TermOfUse.html">Terms of Use</a>
+          <a class="nav-link active" href="TermOfUse.html">Terms of Use</a>
         </li>
         <div width="auto" background-color="black">
             <script async src="https://cse.google.com/cse.js?cx=d35b9e14fb3d25e66"></script>
             <div class="gcse-search"></div>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Quick link
           </a>
-          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <a class="dropdown-item" href="ChatBot.html">ChatBot</a> 
-            <a class="dropdown-item" href="Donkeygame.html">Donkey.js Game</a> 
-            <a class="dropdown-item" href="Calculator.html">Calculator</a>
-            <a class="dropdown-item" href="CaesarCipher.html">Caesar Cipher</a>
-            <a class="dropdown-item" href="BMI_calculator.html">BMI Calculator</a>
-            <a class="dropdown-item" href="Math_solver.html">Math Solver</a>
-            <a class="dropdown-item" href="Stopwatch.html">Stopwatch</a>
-            <a class="dropdown-item" href="Guess_number_game.html">Guess-Number Game</a>  
-            <a class="dropdown-item" href="https://fikrimulyana.github.io/">My Previous Website</a> 
+          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" href="ChatBot.html">ChatBot</a> </li>
+            <li><a class="dropdown-item" href="Donkeygame.html">Donkey.js Game</a> </li>
+            <li></li><a class="dropdown-item" href="Calculator.html">Calculator</a></li>
+            <li><a class="dropdown-item" href="CaesarCipher.html">Caesar Cipher</a></li>
+            <li><a class="dropdown-item" href="BMI_calculator.html">BMI Calculator</a></li>
+            <li><a class="dropdown-item" href="Math_solver.html">Math Solver</a></li>
+            <li><a class="dropdown-item" href="Stopwatch.html">Stopwatch</a></li>
+            <li><a class="dropdown-item" href="Guess_number_game.html">Guess-Number Game</a></li>
+            <li><a class="dropdown-item" href="https://fikrimulyana.github.io/">My Previous Website</a></li>
   
- 
-          </div>
+          </ul>
         </li>
       </ul>
     </div>
-  </nav>
-  <h2 class="title" align="center" color="#D49513"><b><em>Content:</em></b>
-  </h2>
-  <div class="container">
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-  <ol class="carousel-indicators">
-    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-  </ol>
-  <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img id="slide" src="slide1.jpg" class="d-block w-100" alt="s1">
-    </div>
-    <div class="carousel-item">
-      <img id="slide" src="slide2.JPG" class="d-block w-100" alt="s2">
-    </div>
-    <div class="carousel-item">
-      <img id="slide" src="slide3.JPG" class="d-block w-100" alt="s3">
-    </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
-  </a>
-  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
-  </a>
-</div> <br/>
+</nav>
+  
+  
+
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active car1">
+        <div class="overlay-image" style="background-image: url(./slide-1.jpg);"></div>
+        <div class="cover" >
+          <h5>Fisika</h5>
+          <a href="Physics_menu.html" class="text-decoration-none text-reset" >Lihatlah betapa teraturnya dunia disini</a><br />
+          <a type="button" class="btn btn-primary btn-lg carbtn" href="Physics_menu.html">Lihat</a> 
+        </div>
+      </div>
+      <div class="carousel-item">
+        <div class="overlay-image" style="background-image: url(./slide-2.jpg);"></div>
+        <div class="cover">
+          <h5>Matematika</h5>
+          <a href="Math-menu.html" class="text-decoration-none text-reset">Jendela untuk memahami keteraturan dunia</a> <br />
+          <a type="button" class="btn btn-primary btn-lg carbtn" href="Math-menu.html">Lihat</a> 
+        </div>
+      </div>
+      <div class="carousel-item ">
+        <div class="overlay-image" style="background-image: url(./slide-3.jpg);"></div>
+        <div class="cover">
+          <h5>Computer Science</h5>
+          <a href="computerscience.html" class="text-decoration-none text-reset">Apa saja yang dapat dilakukan komputer?</a><br />
+          <a type="button" class="btn btn-primary btn-lg carbtn" href="computerscience.html">Lihat</a>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
   </div>
+  
+  
+
 
 <div class="background-timeline">
   <p class="programmingJourney">My Programming Journey</p>
@@ -300,7 +313,34 @@
   <p align="center"><img id="fotoprofil" src="FB_IMG_1591675852359.jpg" border=5 style="border-radius:50%;" /></p>
   <br>
   <p id="keterangan" align="center"><em><b>Fikri Mulyana Setiawan adalah seorang siswa, web developer, dan programmer. Ia sangat antusias ketika menemukan hal yang menantang, seperti teka-teki, dan tentu saja subjek matematika dan fisika. Ia sekarang duduk di bangku SMA kelas XII. Bahasa pemrograman yang ia kuasai meliputi bahasa pascal(basic), javascript(basic), dan juga python (intermediate). selain seorang programmer, fikri juga seorang fisikawan.</b></em></p>
-  <div id="copyright" align="center"><a href="TermOfUse.html">terms of use</a><p class="hakcipta">copyright &copy;fikri mulyana setiawan</br><a href="//www.dmca.com/Protection/Status.aspx?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db" title="DMCA.com Protection Status" class="dmca-badge"> <img src ="https://images.dmca.com/Badges/dmca-badge-w150-5x1-10.png?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db"  alt="DMCA.com Protection Status" /></a></p>  <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"> </script></div>
+  
+  
+  <div class="footer">
+    <div class="tabel">
+      <table border="0">
+        <tr>
+          <td class="link"><a class="text-decoration-none text-reset" href="index.html">Halaman Utama</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="Contact-me.html">Kontak</a></td>
+        </tr>
+        <tr>
+          <td class="link"><a class="text-decoration-none text-reset" href="Javascriptproject-menu.html">Javascript Project</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="TermOfUse.html">Terms Of Use</a></td>
+        </tr>
+        <tr>
+          <td class="link"><a class="text-decoration-none text-reset" href="Physics_menu.html">Blog Fisika</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="Math_menu.html">Blog Matematika</a></td>
+        </tr>
+        <tr>
+          <td class="link"><a class="text-decoration-none text-reset" href="computerscience.html">Blog computer science</a></td>
+        </tr>
+      </table>
+    </div>
+    <div class="copyright">
+      <div><a href="//www.dmca.com/Protection/Status.aspx?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db" title="DMCA.com Protection Status" class="dmca-badge"> <img src="https://images.dmca.com/Badges/dmca-badge-w150-5x1-10.png?ID=f475e6cd-4ea7-41fb-8d13-b438de7639db" alt="DMCA.com Protection Status" /></a></div>
+      <div>copyright &copy; Fikri Mulyana Setiawan</div>
+    </div>
+  </div>
+  
   </script>
    <script type="text/javascript" charset="utf-8">
      ScrollReveal().reveal('.time');
@@ -309,9 +349,8 @@
     var loading = document.getElementById('loading');
     window.addEventListener('load', function() { loading.style.display = "none" });
   </script>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>  
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </body>
 
 </html>
