--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
           <a class="nav-link active" href="Javascriptproject-menu.html">Javascript Project</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link active" href="HearingMusic.html">Hear Music</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" href="Get_help.html">Help!</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link active" href="My_album.html">My Album</a>
         </li>
         <li class="nav-item">
