--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
             Quick link
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <li><a class="dropdown-item" href="Weather_app.html">Weather App</a> </li>
             <li><a class="dropdown-item" href="ChatBot.html">ChatBot</a> </li>
             <li><a class="dropdown-item" href="Donkeygame.html">Donkey.js Game</a> </li>
             <li></li><a class="dropdown-item" href="Calculator.html">Calculator</a></li>
@@ -234,6 +235,16 @@
 
   <div class="titleUpdate">Update :</div>
   <div class="LatestUpdate">
+    <div class="item">
+      <div class="card" style="width: 18rem;">
+        <img class="update" height="160" src="imageforweather.jpg" class="card-img-top" alt="Weather App">
+        <div class="card-body">
+          <h5 class="card-title">Weather Web App</h5>
+          <p class="card-text" align="justify">Project ini adalah project pertama saya yang menggunakan API. Web App ini berfungsi untuk mengetahui keadaan cuaca dan info penting lainnya dari seluruh dunia.</p>
+          <a href="Weather_app.html" class="btn btn-primary">Lihat</a>
+        </div>
+      </div>
+    </div>
     <div class="item">
       <div class="card" style="width: 18rem;">
         <img class="update" height="160" src="imageforhelp.jpg" class="card-img-top" alt="Help">
