--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -57,9 +57,12 @@
       <th><a href="Stopwatch.html">- Stopwatch</a></th>
       <th><a href="Guess_number_game.html">- Guess-number Game</a></th> 
     </tr>
+    <tr>
       <th><a href="Donkeygame.html">- Donkey.js Game</a></th>
       <th><a href="ChatBot.html">- ChatBot</a></th>
+    </tr>
     <tr>
+      <th><a href="Weather_app.html">- Weather App</a></th>
     </tr>
   </table>
 </div>
