--- a/index.html
+++ b/index.html
@@ -17,7 +17,24 @@
   <meta charset="utf-8">
   <meta name="theme-color" content="#4E5054"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
+  <!-- Primary Meta Tags -->
+<title>Fikri Notes | Website Fikri Mulyana Setiawan</title>
+<meta name="title" content="Fikri Notes | Website Fikri Mulyana Setiawan">
+<meta name="description" content="Math, science and technology.  all you can see here.  let's dive into science">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://fikrimulyanasetiawan.github.io/">
+<meta property="og:title" content="Fikri Notes | Website Fikri Mulyana Setiawan">
+<meta property="og:description" content="Math, science and technology.  all you can see here.  let's dive into science">
+<meta property="og:image" content="">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://fikrimulyanasetiawan.github.io/">
+<meta property="twitter:title" content="Fikri Notes | Website Fikri Mulyana Setiawan">
+<meta property="twitter:description" content="Math, science and technology.  all you can see here.  let's dive into science">
+<meta property="twitter:image" content="">
   <link href="https://fonts.googleapis.com/css2?family=Coda&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
