--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://metatags.io/">
+<meta property="og:url" content="https://fikrimulyanasetiawan.github.io/">
 <meta property="og:title" content="Fikri Notes - Find Unique Ideas Here">
 <meta property="og:description" content="Math, science and technology.  all you can see here.  let's dive into science">
 <meta property="og:image" content="https://fikrimulyanasetiawan.github.io/metaTag.jpg">
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://metatags.io/">
+<meta property="twitter:url" content="https://fikrimulyanasetiawan.github.io/">
 <meta property="twitter:title" content="Fikri Notes - Find Unique Ideas Here">
 <meta property="twitter:description" content="Math, science and technology.  all you can see here.  let's dive into science">
 <meta property="twitter:image" content="https://fikrimulyanasetiawan.github.io/metaTag.jpg">
