--- a/Weather_app.html
+++ b/Weather_app.html
@@ -16,7 +16,25 @@
   <meta name="google-site-verification" content="JJt8s-bShfClSaIksS6BEHrJq7gFqDScaqKzsULaaH4" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Weather App | Fikri Notes</title>
+    <!-- Primary Meta Tags -->
+<title>Fikri Notes - Find Unique Ideas Here</title>
+<meta name="title" content="Weather App - Fikri Notes">
+<meta name="description" content="A Powerful web app to get the weather data from all arround the world">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://fikrimulyanasetiawan.github.io/">
+<meta property="og:title" content="Weather App - Fikri Notes">
+<meta property="og:description" content="A Powerful web app to get the weather data from all arround the world">
+<meta property="og:image" content="https://fikrimulyanasetiawan.github.io/metaTag.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://fikrimulyanasetiawan.github.io/">
+<meta property="twitter:title" content="Weather App - Fikri Notes">
+<meta property="twitter:description" content="A Powerful web app to get the weather data from all arround the world">
+<meta property="twitter:image" content="https://fikrimulyanasetiawan.github.io/metaTag.jpg">
+  
     
       <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet"> 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"> 
