--- a/Weather_app.html
+++ b/Weather_app.html
@@ -17,7 +17,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Primary Meta Tags -->
-<title>Fikri Notes - Find Unique Ideas Here</title>
+<title>Weather App | A Web App made by Fikri Mulyana Setiawan</title>
 <meta name="title" content="Weather App - Fikri Notes">
 <meta name="description" content="A Powerful web app to get the weather data from all arround the world">
 
