--- a/Numbers_fact.html
+++ b/Numbers_fact.html
@@ -167,19 +167,19 @@
     <div class="tabel">
       <table border="0">
         <tr>
-          <td class="link"><a class="text-decoration-none text-reset" href="index.html">Halaman Utama</a></td>
-          <td class="link"><a class="text-decoration-none text-reset" href="Contact-me.html">Kontak</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="index.html">Home</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="Contact-me.html">Contact</a></td>
         </tr>
         <tr>
           <td class="link"><a class="text-decoration-none text-reset" href="Javascriptproject-menu.html">Javascript Project</a></td>
           <td class="link"><a class="text-decoration-none text-reset" href="TermOfUse.html">Terms Of Use</a></td>
         </tr>
         <tr>
-          <td class="link"><a class="text-decoration-none text-reset" href="Physics_menu.html">Blog Fisika</a></td>
-          <td class="link"><a class="text-decoration-none text-reset" href="Math_menu.html">Blog Matematika</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="Physics_menu.html">Physics Blog</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="Math_menu.html">Mathematics Blog</a></td>
         </tr>
         <tr>
-          <td class="link"><a class="text-decoration-none text-reset" href="computerscience.html">Blog computer science</a></td>
+          <td class="link"><a class="text-decoration-none text-reset" href="computerscience.html">Computer Science Blog</a></td>
         </tr>
       </table>
     </div>
