--- a/index.html
+++ b/index.html
@@ -254,6 +254,16 @@
   <div class="LatestUpdate">
     <div class="item">
       <div class="card" style="width: 18rem;">
+        <img class="update" height="160" src="bgfornumbersfact.jpg" class="card-img-top" alt="number's fact">
+        <div class="card-body">
+          <h5 class="card-title">Number's Fact</h5>
+          <p class="card-text" align="justify">Anda suka matematika? anda tertarik dengan angka angka?tunggu apa lagi, langsung klik tombol di bawah dan baca petunjuk penggunaan website ini. </p>
+          <a href="Weather_app.html" class="btn btn-primary">Lihat</a>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="card" style="width: 18rem;">
         <img class="update" height="160" src="imageforweather.jpg" class="card-img-top" alt="Weather App">
         <div class="card-body">
           <h5 class="card-title">Weather Web App</h5>
