--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -63,6 +63,7 @@
     </tr>
     <tr>
       <th><a href="Weather_app.html">- Weather App</a></th>
+      <th><a href="Numbers_fact.html">- Number's Fact</a></th>
     </tr>
   </table>
 </div>
