--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <div class="card-body">
           <h5 class="card-title">Number's Fact</h5>
           <p class="card-text" align="justify">Anda suka matematika? anda tertarik dengan angka angka?tunggu apa lagi, langsung klik tombol di bawah dan baca petunjuk penggunaan website ini. </p>
-          <a href="Weather_app.html" class="btn btn-primary">Lihat</a>
+          <a href="Numbers_fact.html" class="btn btn-primary">Lihat</a>
         </div>
       </div>
     </div>
