--- a/Numbers_fact.html
+++ b/Numbers_fact.html
@@ -126,7 +126,7 @@
         <div class="getstart" data-aos="fade-up">Let's Get Started</div> <hr class="garis" />
         <div class="random-fact">1. Random Fact:</div> <br />
         <div id="random">
-          <button onclick="random()" class="btn-1">GENERATE</button>
+          <button class="btn-1">GENERATE</button>
         </div>
         <br />
         <div class="mb-3">
@@ -148,7 +148,7 @@
         <input class="form-control input" type="text" placeholder="Some Number" />
         <div class="note">note: please only fill in this form with numbers</div> <br />
         <div id="random">
-          <button onclick="custom()" class="btn-1">ENTER</button>
+          <button class="btn-1 btn-2">ENTER</button>
         </div>
         <br />
         <div class="mb-3">
