--- a/computerscience.html
+++ b/computerscience.html
@@ -49,6 +49,8 @@
     </tr>
     <tr>
        <th><a href="think-like-a-coder.html">Think like a coder</a></th>
+       <th><a href="python_basics_statement.html">Python Basics Statement</a></th>
+
     </tr>
 
     
