--- a/Math_solver.html
+++ b/Math_solver.html
@@ -12,9 +12,26 @@
   gtag('config', 'G-T9QDCNTY1F');
 </script>
   <link rel="icon" href="logo_fix.png" height=250px>
+  <meta name="google-site-verification" content="JJt8s-bShfClSaIksS6BEHrJq7gFqDScaqKzsULaaH4" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Math Solver | Pecahkan Persoalan Matematika Anda Disini | Fikri Notes</title>
+    <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://fikrinotes.netlify.app/">
+<meta property="og:title" content="Math Solver : Solve for Linear Equation">
+<meta property="og:description" content="A Web App that help you to solve two-variable linear equation and three-variable linear equation ">
+<meta property="og:image" content="https://fikrinotes.github.io/metaTag.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://fikrinotes.netlify.app/">
+<meta property="twitter:title" content="Math Solver : Solve for Linear Equation">
+">
+<meta property="twitter:description" content="A Web App that help you to solve two-variable linear equation and three-variable linear equation ">
+">
+<meta property="twitter:image" content="https://fikrinotes.github.io/metaTag.jpg">
+  
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="Math_solver.css" type="text/css" />
