--- a/Math_solver.html
+++ b/Math_solver.html
@@ -37,10 +37,8 @@
     <link rel="stylesheet" href="Math_solver.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Coda&family=Gruppo&family=Play&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Metamorphous&display=swap" rel="stylesheet">
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.3.0/math.min.js" integrity="sha512-2Ckw3zmQU6j6oTB5XbhSnQYyRqPDoYKMTVbTllvPKi9Pg1+2V5tV8UXhpn9eGSWU/FHzCHl+t+AJJhFCxOs5Og==" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="Math_solver.js" charset="utf-8">
-      
-    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/7.3.0/math.min.js" integrity="sha512-2Ckw3zmQU6j6oTB5XbhSnQYyRqPDoYKMTVbTllvPKi9Pg1+2V5tV8UXhpn9eGSWU/FHzCHl+t+AJJhFCxOs5Og==" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="Math_solver.js" charset="utf-8"></script>
 </head>
 
 <body>
