--- a/Javascriptproject-menu.html
+++ b/Javascriptproject-menu.html
@@ -65,6 +65,9 @@
       <th><a href="Weather_app.html">- Weather App</a></th>
       <th><a href="Numbers_fact.html">- Number's Fact</a></th>
     </tr>
+    <tr>
+      <th><a href="Boring_math.html">- Boring Math</a></th>
+    </tr>
   </table>
 </div>
 </body>
