--- a/Boring_math.html
+++ b/Boring_math.html
@@ -3,8 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Boring Math | Fikri Notes</title>
+    <meta name="theme-color" content="#212529"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Primary Meta Tags -->
+<title>Boring Math | A Math Solver by Fikri Mulyana Setiawan - Fikri Notes</title>
+<meta name="title" content="Boring Math | A Math Solver by Fikri Mulyana Setiawan - Fikri Notes">
+<meta name="description" content="Boring Math adalah aplikasi pemecah soal matematika sederhana yang seringkali melibatkan perhitungan yang rumit. Agar anda hanya fokus ke ide dan bukan ke perhitungan, aplikasi ini hadir untuk anda">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://fikrinotes.netlify.app/">
+<meta property="og:title" content="Boring Math | A Math Solver by Fikri Mulyana Setiawan - Fikri Notes">
+<meta property="og:description" content="Boring Math adalah aplikasi pemecah soal matematika sederhana yang seringkali melibatkan perhitungan yang rumit. Agar anda hanya fokus ke ide dan bukan ke perhitungan, aplikasi ini hadir untuk anda">
+<meta property="og:image" content="https://fikrinotes.github.io/metaTag.jpg">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://fikrinotes.netlify.app/">
+<meta property="twitter:title" content="Boring Math | A Math Solver by Fikri Mulyana Setiawan - Fikri Notes">
+<meta property="twitter:description" content="Boring Math adalah aplikasi pemecah soal matematika sederhana yang seringkali melibatkan perhitungan yang rumit. Agar anda hanya fokus ke ide dan bukan ke perhitungan, aplikasi ini hadir untuk anda">
+<meta property="twitter:image" content="https://fikrinotes.github.io/metaTag.jpg">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="Boring_math.css" type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Coda&family=Gruppo&family=Play&display=swap" rel="stylesheet">
