--- a/index.html
+++ b/index.html
@@ -254,6 +254,16 @@
   <div class="LatestUpdate">
     <div class="item">
       <div class="card" style="width: 18rem;">
+        <img class="update" height="160" src="bgboringmath.jpg" class="card-img-top" alt="Boring Math image">
+        <div class="card-body">
+          <h5 class="card-title">Boring Math</h5>
+          <p class="card-text" align="justify">boring math adalah layanan untuk menyelesaikan persoalan matematika secara otomatis.Layanan merupakan pengembangan dari math solver. </p>
+          <a href="Boring_math.html" class="btn btn-primary">Lihat</a>
+        </div>
+      </div>
+    </div>
+    <div class="item">
+      <div class="card" style="width: 18rem;">
         <img class="update" height="160" src="bgfornumbersfact.jpg" class="card-img-top" alt="number's fact">
         <div class="card-body">
           <h5 class="card-title">Number's Fact</h5>
