--- a/Boring_math.html
+++ b/Boring_math.html
@@ -2,6 +2,18 @@
 <html>
 
 <head>
+    <script data-ad-client="ca-pub-4239518651987758" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-T9QDCNTY1F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-T9QDCNTY1F');
+</script>
+<link rel="icon" href="logo_fix.png" height=250px>
+  <meta name="google-site-verification" content="JJt8s-bShfClSaIksS6BEHrJq7gFqDScaqKzsULaaH4" />
     <meta charset="UTF-8">
     <meta name="theme-color" content="#212529"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
