--- a/fikrinotes.github.io/Javascriptproject-menu/index.html
+++ b/fikrinotes.github.io/Javascriptproject-menu/index.html
@@ -33,8 +33,8 @@
 </div>
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-    <li class="breadcrumb-item"><a href="Javascriptproject-menu.html">My Javascript Project</a></li>
+    <li class="breadcrumb-item"><a href="fikrinotes.netlify.app">Home</a></li>
+    <li class="breadcrumb-item"><a href="Javascriptproject-menu/index.html">My Javascript Project</a></li>
   </ol>
 </nav> 
 <div class="kartu">
@@ -43,30 +43,30 @@
   <table width="300" border="0">
     <tr>
       <th width="150">
-        <a href="CaesarCipher.html">- Caesar Cipher</a>
+        <a href="CaesarCipher/index.html">- Caesar Cipher</a>
       </th>
       <th>
-        <a href="Calculator.html">- Calculator</a>
+        <a href="Calculator/index.html">- Calculator</a>
       </th>
     </tr>
     <tr>
-      <th><a href="BMI_calculator.html">- BMI calculator</a></th>
-      <th><a href="Math_solver.html">- Math solver</a></th>
+      <th><a href="BMI_calculator/index.html">- BMI calculator</a></th>
+      <th><a href="Math_solver/index.html">- Math solver</a></th>
     </tr>
     <tr>
-      <th><a href="Stopwatch.html">- Stopwatch</a></th>
-      <th><a href="Guess_number_game.html">- Guess-number Game</a></th> 
+      <th><a href="Stopwatch/index.html">- Stopwatch</a></th>
+      <th><a href="Guess_number_game/index.html">- Guess-number Game</a></th> 
     </tr>
     <tr>
-      <th><a href="Donkeygame.html">- Donkey.js Game</a></th>
-      <th><a href="ChatBot.html">- ChatBot</a></th>
+      <th><a href="Donkeygame/index.html">- Donkey.js Game</a></th>
+      <th><a href="ChatBot/index.html">- ChatBot</a></th>
     </tr>
     <tr>
-      <th><a href="Weather_app.html">- Weather App</a></th>
-      <th><a href="Numbers_fact.html">- Number's Fact</a></th>
+      <th><a href="Weather_app/index.html">- Weather App</a></th>
+      <th><a href="Numbers_fact/index.html">- Number's Fact</a></th>
     </tr>
     <tr>
-      <th><a href="Boring_math.html">- Boring Math</a></th>
+      <th><a href="Boring_math/index.html">- Boring Math</a></th>
     </tr>
   </table>
 </div>
