--- a/Javascriptproject-menu/Stopwatch/index.html
+++ b/Javascriptproject-menu/Stopwatch/index.html
@@ -11,7 +11,7 @@
 
   gtag('config', 'G-T9QDCNTY1F');
 </script>
-  <link rel="icon" href="logo_fix.png" height=250px>
+  <link rel="icon" href="../../logo_fix.png" height=250px>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Stopwatch v1.0 | Fikri Notes</title>
