--- a/Javascriptproject-menu/Donkeygame/index.html
+++ b/Javascriptproject-menu/Donkeygame/index.html
@@ -59,7 +59,7 @@
       <button id="buttonup" type="button" class="btn btn-warning" onclick="carUp()"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-compact-up" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" d="M7.776 5.553a.5.5 0 0 1 .448 0l6 3a.5.5 0 1 1-.448.894L8 6.56 2.224 9.447a.5.5 0 1 1-.448-.894l6-3z" />
         </svg></button>
-      <a href="Donkeygame.html" class="btn btn-warning"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-counterclockwise" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <a href="https://fikrinotes.netlify.app/javascriptproject-menu/donkeygame/" class="btn btn-warning"><svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-arrow-counterclockwise" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" d="M8 3a5 5 0 1 1-4.546 2.914.5.5 0 0 0-.908-.417A6 6 0 1 0 8 2v1z" />
           <path d="M8 4.466V.534a.25.25 0 0 0-.41-.192L5.23 2.308a.25.25 0 0 0 0 .384l2.36 1.966A.25.25 0 0 0 8 4.466z" />
         </svg></a>
