--- a/Javascriptproject-menu/Weather_app/index.html
+++ b/Javascriptproject-menu/Weather_app/index.html
@@ -12,7 +12,7 @@
 
   gtag('config', 'G-T9QDCNTY1F');
 </script>
-<link rel="icon" href="logo_fix.png" height=250px>
+<link rel="icon" href="../../logo_fix.png" height=250px>
   <meta name="google-site-verification" content="JJt8s-bShfClSaIksS6BEHrJq7gFqDScaqKzsULaaH4" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -49,14 +49,14 @@
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
-    <a class="navbar-brand" href="index.html"><div class="logo"><img src="fikri_notes.png" alt="logo" width="60"/><div class="webpage">FIKRI NOTES</div></div></a>
+    <a class="navbar-brand" href="https://fikrinotes.netlify.app"><div class="logo"><img src="../../fikri_notes.png" alt="logo" width="60"/><div class="webpage">FIKRI NOTES</div></div></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+          <a class="nav-link active" aria-current="page" href="https://fikrinotes.netlify.app">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="Physics_menu.html">Fisika</a>
@@ -68,7 +68,7 @@
           <a class="nav-link active" href="computerscience.html">Computer Science</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="Javascriptproject-menu.html">Javascript Project</a>
+          <a class="nav-link active" href="https://fikrinotes.netlify.app/Javascriptproject-menu/">Javascript Project</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active" href="HearingMusic.html">Hear Music</a>
@@ -90,14 +90,14 @@
             Quick link
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="ChatBot.html">ChatBot</a> </li>
-            <li><a class="dropdown-item" href="Donkeygame.html">Donkey.js Game</a> </li>
-            <li></li><a class="dropdown-item" href="Calculator.html">Calculator</a></li>
-            <li><a class="dropdown-item" href="CaesarCipher.html">Caesar Cipher</a></li>
-            <li><a class="dropdown-item" href="BMI_calculator.html">BMI Calculator</a></li>
-            <li><a class="dropdown-item" href="Math_solver.html">Math Solver</a></li>
-            <li><a class="dropdown-item" href="Stopwatch.html">Stopwatch</a></li>
-            <li><a class="dropdown-item" href="Guess_number_game.html">Guess-Number Game</a></li>
+            <li><a class="dropdown-item" href="../ChatBot/index.html">ChatBot</a> </li>
+            <li><a class="dropdown-item" href="../Donkeygame/index.html">Donkey.js Game</a> </li>
+            <li></li><a class="dropdown-item" href="../Calculator/index.html">Calculator</a></li>
+            <li><a class="dropdown-item" href="../CaesarCipher/index.html">Caesar Cipher</a></li>
+            <li><a class="dropdown-item" href="../BMI_calculator/index.html">BMI Calculator</a></li>
+            <li><a class="dropdown-item" href="../Math_solver/index.html">Math Solver</a></li>
+            <li><a class="dropdown-item" href="../Stopwatch/index.html">Stopwatch</a></li>
+            <li><a class="dropdown-item" href="../Guess_number_game/index.html">Guess-Number Game</a></li>
             <li><a class="dropdown-item" href="https://fikrimulyana.github.io/">My Previous Website</a></li>
   
           </ul>
