--- a/Javascriptproject-menu/Boring_math/index.html
+++ b/Javascriptproject-menu/Boring_math/index.html
@@ -12,7 +12,7 @@
 
   gtag('config', 'G-T9QDCNTY1F');
 </script>
-<link rel="icon" href="logo_fix.png" height=250px>
+<link rel="icon" href="../../logo_fix.png" height=250px>
   <meta name="google-site-verification" content="JJt8s-bShfClSaIksS6BEHrJq7gFqDScaqKzsULaaH4" />
     <meta charset="UTF-8">
     <meta name="theme-color" content="#212529"/>
@@ -60,7 +60,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="index.html">
-      <div class="logo"><img src="fikri_notes.png" alt="logo" width="60" />
+      <div class="logo"><img src="../../fikri_notes.png" alt="logo" width="60" />
         <div class="webpage">FIKRI NOTES</div>
       </div>
     </a>
