--- a/Javascriptproject-menu/Boring_math/index.html
+++ b/Javascriptproject-menu/Boring_math/index.html
@@ -108,11 +108,11 @@
             <li><a class="dropdown-item" href="Donkeygame.html">Donkey.js Game</a> </li>
             <li></li><a class="dropdown-item" href="Calculator.html">Calculator</a>
         </li>
-        <li><a class="dropdown-item" href="CaesarCipher.html">Caesar Cipher</a></li>
-        <li><a class="dropdown-item" href="BMI_calculator.html">BMI Calculator</a></li>
-        <li><a class="dropdown-item" href="Math_solver.html">Math Solver</a></li>
-        <li><a class="dropdown-item" href="Stopwatch.html">Stopwatch</a></li>
-        <li><a class="dropdown-item" href="Guess_number_game.html">Guess-Number Game</a></li>
+        <li><a class="dropdown-item" href="../CaesarCipher/index.html">Caesar Cipher</a></li>
+        <li><a class="dropdown-item" href="../BMI_calculator/index.html">BMI Calculator</a></li>
+        <li><a class="dropdown-item" href="../Math_solver/index.html">Math Solver</a></li>
+        <li><a class="dropdown-item" href="../Stopwatch/index.html">Stopwatch</a></li>
+        <li><a class="dropdown-item" href="../Guess_number_game/index.html">Guess-Number Game</a></li>
         <li><a class="dropdown-item" href="https://fikrimulyana.github.io/">My Previous Website</a></li>
       </ul>
       </li>
@@ -123,7 +123,7 @@
 
 <div class="bagian1">
   <p class="header1" data-aos="zoom-out-up">Boring Math!</p>
-  <p align="justify">boring math adalah layanan untuk menyelesaikan persoalan matematika sederhana secara otomatis. nama ini saya dapatkan ketika saya melakukan perhitungan yang membosankan di matematika, padahal matematika adalah ilmu tentang ide/pemikiran logis&sistematis bukan soal hitung-hitungan belaka. Layanan ini adalah pengembangan lebih lanjut dari <a href="Math_solver.html" class="text-decoration-none">math solver</a>. disini, anda dapat menemukan penyelesaian soal persamaan linear (2 variabel dan 3 variabel) dan persamaan kuadrat. ada 2 aturan yang harus anda terapkan agar soal matematika anda dapat dijawab disini. aturan pertama adalah, misalkan anda ingin menulis persamaan x-3y=5, maka tulislah 1x-3y=5. lihat, angka "1" tetap harus ditulis disini. contoh lain : tulis 3x+1y=7, jangan tulis 3x+y=7. aturan kedua, jika anda ingin penyelesaian persamaan linear, anda hanya dapat menggunakan variabel x dan y untuk persamaan linear 2 variabel dan x,y dan z  untuk persamaan linear 3 variabel. Seharusnya tidak akan ada masalah jika anda mengikuti aturan yang saya sebutkan sebelumnya. Jika memang ada masalah atau anda ingin menanyakan sesuatu tentang aplikasi ini, jangan ragu untuk menghubungi saya <a href="Contact-me.html" class="text-decoration-none">disini</a>.</p>
+  <p align="justify">boring math adalah layanan untuk menyelesaikan persoalan matematika sederhana secara otomatis. nama ini saya dapatkan ketika saya melakukan perhitungan yang membosankan di matematika, padahal matematika adalah ilmu tentang ide/pemikiran logis&sistematis bukan soal hitung-hitungan belaka. Layanan ini adalah pengembangan lebih lanjut dari <a href="../Math_solver/index.html" class="text-decoration-none">math solver</a>. disini, anda dapat menemukan penyelesaian soal persamaan linear (2 variabel dan 3 variabel) dan persamaan kuadrat. ada 2 aturan yang harus anda terapkan agar soal matematika anda dapat dijawab disini. aturan pertama adalah, misalkan anda ingin menulis persamaan x-3y=5, maka tulislah 1x-3y=5. lihat, angka "1" tetap harus ditulis disini. contoh lain : tulis 3x+1y=7, jangan tulis 3x+y=7. aturan kedua, jika anda ingin penyelesaian persamaan linear, anda hanya dapat menggunakan variabel x dan y untuk persamaan linear 2 variabel dan x,y dan z  untuk persamaan linear 3 variabel. Seharusnya tidak akan ada masalah jika anda mengikuti aturan yang saya sebutkan sebelumnya. Jika memang ada masalah atau anda ingin menanyakan sesuatu tentang aplikasi ini, jangan ragu untuk menghubungi saya <a href="https://fikrinotes.netlify.app/Contact-me.html" class="text-decoration-none">disini</a>.</p>
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#232136" fill-opacity="1" d="M0,224L48,234.7C96,245,192,267,288,245.3C384,224,480,160,576,122.7C672,85,768,75,864,85.3C960,96,1056,128,1152,138.7C1248,149,1344,139,1392,133.3L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 </div>
 
